<resources>
    <string name="app_name">碎片</string>

    <!-- include_bottom.xml 字符串资源 start -->
    <string name="tv_text_custom">定制</string>
    <string name="tv_text_publish">发布</string>
    <string name="tv_text_near">附近</string>
    <string name="tv_text_me">我</string>
    <!-- include_bottom.xml 字符串资源 end -->
    <!-- common start -->
    <string name="error_net">当前网络不可用，请检查网络配置</string>
    <!-- common end -->
    <!--  login activity start-->
    <string name="et_hint_user_login">请输入账号</string>
    <string name="et_hint_pwd_login">请输入密码</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="tv_forget_pwd_text">忘记密码</string>
    <string name="tv_title_text_register">用户注册</string>
    <string name="tv_name_text_register">账号:</string>
    <string name="et_name_hint_register">请输入用户名</string>
    <string name="tv_password_text_register">密码:</string>
    <string name="et_password_register">请输入密码</string>
    <string name="tv_email_register">邮箱:</string>
    <string name="et_email_register">请输入邮箱</string>
    <string name="btn_submit_text_register">提交注册</string>
    <string name="et_verification_hint_register">请输入验证码</string>
    <string name="btn_verification_text_register">获取验证码</string>
    <string name="tv_verification_text_register">验证码:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--  login activity end-->

</resources>
