<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    >
    <!-- 普通底部导航 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black2" />

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <!-- 定制 start -->
        <RelativeLayout
            android:id="@+id/rl_custom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/iv_customed"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_custom" />

                <TextView
                    android:id="@+id/tv_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_customed"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tv_text_custom"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <!--<TextView-->
                    <!--android:id="@+id/unread_msg_number"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_marginRight="8dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="7"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="12sp"-->
                    <!--android:visibility="gone" />-->
            </RelativeLayout>
        </RelativeLayout>
        <!-- 定制 end -->
        <!-- 发布 start -->
        <RelativeLayout
            android:id="@+id/rl_publish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/iv_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_publish" />

                <TextView
                    android:id="@+id/tv_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_publish"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tv_text_publish"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <!--<TextView-->
                    <!--android:id="@+id/unread_address_number"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_marginRight="8dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="7"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="12sp"-->
                    <!--android:visibility="gone" />-->
            </RelativeLayout>
        </RelativeLayout>
        <!-- 发布 end -->

        <!-- 附近 start -->
        <RelativeLayout
            android:id="@+id/rl_near"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp" >

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/iv_near"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_centerHorizontal="true"
                    android:background="#ffffff"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/tab_near" />

                <TextView
                    android:id="@+id/tv_near"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_near"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tv_text_near"
                    android:textColor="#9A9A9A"
                    android:textSize="12sp" />

                <!--<TextView-->
                    <!--android:id="@+id/unread_find_number"-->
                    <!--android:layout_width="10dp"-->
                    <!--android:layout_height="10dp"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text=""-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="12sp"-->
                    <!--android:visibility="visible" />-->
            </RelativeLayout>
        </RelativeLayout>
        <!-- 附近 end -->

        <!-- 我 start -->
        <RelativeLayout
            android:id="@+id/rl_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="3dp" >

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_centerHorizontal="true"
                android:background="#ffffff"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/tab_me" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/tv_text_me"
                android:textColor="#9A9A9A"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
    <!-- 我 end -->
</LinearLayout>